--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: go
+before_install:
+  - go get github.com/mattn/goveralls
 script:
 - go test ./...
 - make build-all
+- $GOPATH/bin/goveralls -service=travis-ci
 before_deploy:
 - curl https://github.com/lindell/github-release-cli/releases/download/1.2.0/github-releaser-travis -L --output github-releaser && chmod +x github-releaser
 - export BODY=$(envsubst < ./deployments/CHANGELOG.md)
