Removed darwin/386 building

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -16,6 +16,8 @@ builds:
         goarch: arm
       - goos: darwin
         goarch: arm64
+      - goos: darwin
+        goarch: 386
 archives:
   - replacements:
       darwin: Darwin
